fix for safari js, and products not showing in some browsers

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -809,9 +809,11 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    background: #f1f1f1;
-    height: 0 !important;
-    padding-bottom: 100%;
+    /*background: #f1f1f1;*/
+    max-height: 500px;
+    max-width: 500px;
+    /*height: 0 !important;
+    padding-bottom: 100%;*/
   }
   .swiper-slide > img {
     margin: 0 auto;
@@ -825,14 +827,30 @@
     -webkit-transform: translate3d(-50%,-50%,0);
             transform: translate3d(-50%,-50%,0);
   }
+  .gallery-top .swiper-wrapper {
+    /*height: 100%;*/
+    height: 43vw;
+  }
   .gallery-top {
-    width: 100%;
+    /*width: 100%;
+    flex-grow: 8;
     height: 0 !important;
-    padding-bottom: 100%;
+    padding-bottom: 100%;*/
+    width: 43vw;
+    height: 43vw;
+    max-width: 500px;
+    max-height: 500px;
+  }
+  @media (min-width: 600px) and (max-width: 959px) {
+    .gallery-top {
+      height: 43vw;
+    }
   }
   .gallery-thumbs {
     padding: 10px 0 0 0;
     box-sizing: border-box;
+    flex-grow: 2;
+    max-height: 120px;
   }
   .gallery-thumbs .swiper-slide {
     width: 25%;
@@ -842,6 +860,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
+    max-width: 120px;
   }
 
   .gallery-thumbs .swiper-slide .square-spacer {
